Tests/CompilerTests/negative/argument-labels.hylo
//! no-std

struct A { public memberwise init }

fun one(_ x: A) {}
fun one(_ x: A, _ y: A) {}

fun main() {
  one(y: A())
}
